Fixed the negative header margin-top
For the header to be render with consistent margins on both top and
bottom (was overflowing the Filters row above before) cc @MariaCheca

--- a/app/assets/stylesheets/organization/organization_user_search.css.scss
+++ b/app/assets/stylesheets/organization/organization_user_search.css.scss
@@ -12,7 +12,7 @@
 
   border-bottom: 1px solid $cStructure-darkGrey;
   padding: 15px 0;
-  margin-top: -29px;
+  margin-top: -24px;
 }
 .OrganizationSearch-Item {
   line-height: 30px;
